--- a/MNEPython/Tutorial2.ipynb
+++ b/MNEPython/Tutorial2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,19 +38,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting parameters from ../../Datasets/iEEG/sub-01/eeg/sub-01_task-daf_eeg_filtered.vhdr...\n",
+      "Setting channel info structure...\n",
+      "Reading 0 ... 244237  =      0.000 ...   976.948 secs...\n"
+     ]
+    }
+   ],
    "source": [
     "# Path to the EEG file\n",
-    "eegPath = '../../Datasets/EEG/sub-01/eeg/sub-01_task-daf_eeg_filtered.vhdr'\n",
+    "eegPath = '../../Datasets/iEEG/sub-01/eeg/sub-01_task-daf_eeg_filtered.vhdr'\n",
     "\n",
     "# Load the EEG file using MNE\n",
     "# MNE has different read formats for different EEG file types\n",
     "# Here we are using read_raw_edf to read the EEG file\n",
     "# preload=True loads the data into memory (default is False, which loads the data when needed)\n",
     "raw = mne.io.read_raw_brainvision(eegPath, preload=True)\n",
-    "elecPos = pd.read_csv('../../Datasets/EEG/sub-01/eeg/sub-01_electrodes.tsv', sep='\\t')\n",
+    "elecPos = pd.read_csv('../../Datasets/iEEG/sub-01/eeg/sub-01_electrodes.tsv', sep='\\t')\n",
     "# Add fiducials\n",
     "fiducials = pd.DataFrame({\n",
     "    'name': ['Nz', 'LPA', 'RPA'],\n",
@@ -69,22 +79,32 @@
     "raw.set_montage(montage)\n",
     "\n",
     "# Extract data from raw\n",
-    "data = ...\n",
+    "data = raw.get_data()\n",
     "n_channels = data.shape[0]\n",
     "n_samples = data.shape[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.\n",
+      " 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n"
+     ]
+    }
+   ],
    "source": [
     "# Select an electrode via vector multiplication\n",
     "selectElecIdx = 2\n",
     "selectElecVec = np.zeros(n_channels)\n",
     "# Try creating vector for the selected electrode\n",
-    "...\n",
+    "selectElecVec[selectElecIdx] = 1\n",
     "selectElecData = selectElecVec @ data\n",
     "\n",
     "print(selectElecVec)"
@@ -92,16 +112,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 1. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Select a subset of electrodes via matrix multiplication\n",
     "# Let's select channels 1, 3, and 5\n",
     "selected_channels = [0, 2, 4]\n",
     "ChannelMultiplier = np.zeros((n_channels, n_channels))\n",
     "# Make the ChannelMultiplier select only the selected channels\n",
-    "...\n",
+    "for i in range(n_channels):\n",
+    "    if i in selected_channels:\n",
+    "        ChannelMultiplier[i, i] = 1\n",
     "print(ChannelMultiplier)\n",
     "\n",
     "data_selected = ChannelMultiplier @ data\n",
@@ -113,9 +149,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.16666667 0.16666667 0.16666667\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.16666667 0.16666667\n",
+      " 0.16666667 0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.\n",
+      " 0.         0.         0.         0.         0.         0.        ]\n",
+      "(244238,)\n"
+     ]
+    }
+   ],
    "source": [
     "# Average an electrode-ROI via vector multiplication\n",
     "# Let's average across occipital electrodes\n",
@@ -124,7 +179,7 @@
     "elecIdx = [elecPos[elecPos['name'] == elec].index[0] for elec in elecList]\n",
     "elecVec = np.zeros(n_channels)\n",
     "# Try creating vector for the selected electrodes to average\n",
-    "...\n",
+    "elecVec[elecIdx] = 1.0 / len(elecIdx)\n",
     "elecData = np.dot(elecVec, data)\n",
     "\n",
     "print(elecVec)\n",
@@ -133,16 +188,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.  0.  0.  ... 0.  0.  0. ]\n",
+      " [0.5 0.  0.5 ... 0.  0.  0. ]\n",
+      " [0.  0.  1.  ... 0.  0.  0. ]\n",
+      " ...\n",
+      " [0.  0.  0.  ... 1.  0.  0. ]\n",
+      " [0.  0.  0.  ... 0.  1.  0. ]\n",
+      " [0.  0.  0.  ... 0.  0.  1. ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Channel interpolation via matrix multiplication\n",
     "# Let's interpolate channel 2 using channels 1 and 3\n",
     "interp_channel = 1\n",
     "InterpMultiplier = np.eye(n_channels)\n",
     "# Make the InterpMultiplier interpolate the selected channel\n",
-    "...\n",
+    "InterpMultiplier[interp_channel, interp_channel] = 0\n",
+    "InterpMultiplier[interp_channel, interp_channel-1] = 0.5\n",
+    "InterpMultiplier[interp_channel, interp_channel+1] = 0.5\n",
     "print(InterpMultiplier)\n",
     "data_interp = InterpMultiplier @ data\n",
     "\n",
@@ -151,28 +222,47 @@
     "plt.show()\n",
     "\n",
     "# # Plot the interpolated EEG data\n",
-    "# f, axs = plt.subplots(nrows, ncols, figsize=(15, 10))\n",
-    "# axs = axs.flatten()\n",
-    "# for i in range(n_channels):\n",
-    "#     ax = axs.flatten()[i]\n",
-    "#     ax.plot(data_interp[i, :])\n",
-    "#     ax.set_title(f\"Channel {i+1}\")\n",
-    "#     ax.set_xlabel(\"Time\")\n",
-    "#     ax.set_ylabel(\"Amplitude\")\n",
-    "# plt.show()"
+    "nrows = n_channels\n",
+    "ncols = 1\n",
+    "f, axs = plt.subplots(nrows, ncols, figsize=(15, 10))\n",
+    "axs = axs.flatten()\n",
+    "for i in range(n_channels):\n",
+    "    ax = axs.flatten()[i]\n",
+    "    ax.plot(data_interp[i, :])\n",
+    "    ax.set_title(f\"Channel {i+1}\")\n",
+    "    ax.set_xlabel(\"Time\")\n",
+    "    ax.set_ylabel(\"Amplitude\")\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 1. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 1. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 1. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 1. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Channel 1 and 3 have been plugged into wrong position in the cap\n",
     "# Swap the channels using matrix multiplication\n",
     "SwapMultiplier = np.eye(n_channels)\n",
     "# Make the SwapMultiplier swap the selected channels\n",
-    "...\n",
+    "SwapMultiplier[2, 4] = 1\n",
+    "SwapMultiplier[4, 2] = 1\n",
+    "SwapMultiplier[2, 2] = 0\n",
+    "SwapMultiplier[4, 4] = 0\n",
     "\n",
     "data_swapped = SwapMultiplier @ data\n",
     "\n",
@@ -371,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
